增加redis版本覆盖

--- a/csx-business-dependencies/pom.xml
+++ b/csx-business-dependencies/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <bsf.version>1.5.4-SNAPSHOT</bsf.version>
         <elasticsearch.version>6.7.1</elasticsearch.version>
+        <jedis.version>3.0.1</jedis.version>
     </properties>
 
     <dependencyManagement>
