--- a/csx-business-core/pom.xml
+++ b/csx-business-core/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>csx-business-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
