--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.yh.csx.business</groupId>
         <artifactId>csx-business-dependencies</artifactId>
         <version>1.5.5.2-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>csx-business-dependencies/pom.xml</relativePath>
     </parent>
 
     <artifactId>csx-business-all</artifactId>
