--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.yh.csx.business</groupId>
         <artifactId>csx-business-dependencies</artifactId>
         <version>1.5.5.2-SNAPSHOT</version>
-        <relativePath>csx-business-dependencies/pom.xml</relativePath>
+        <relativePath/>
     </parent>
 
     <artifactId>csx-business-all</artifactId>
@@ -40,14 +40,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-source-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
