添加bsf 1.6.1新增类

--- a/csx-business-extend/pom.xml
+++ b/csx-business-extend/pom.xml
@@ -182,6 +182,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
