--- a/csx-business-extend/pom.xml
+++ b/csx-business-extend/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>com.yh.csx.bsf</groupId>
             <artifactId>csx-bsf-core</artifactId>
-            <version>${bsf.version}</version>
+            <version>1.5.6-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.yh.csx.bsf</groupId>
